<resources>
    <string name="app_name">InSight</string>


    <string name="welcome_string">InSight assists the visually impaired in their daily lives,
        leading to an overall better quality of life. </string>
    <string name="text_to_speech_string">The Text-to-Speech mode allows users to receive audio feedback of
        words that they cannot see.</string>
    <string name="barcode_scanner_string">The Barcode Scanner mode provides the user with audio feedback
        based on the barcode or QR code that was scanned.</string>
    <string name="image_recognition_string">The Image Recognition mode provides the user with audio feedback
        of the objects in their environment. </string>
    <string name="instructions_string">Swipe sideways on the bottom of the screen and press down to determine which feature
        you are on. Once you have selected the desired feature, position the camera appropriately and tap the
        screen to begin. Swipe in from the right side of the screen for help and more information.</string>


    <string name="text_to_speech_slide">Text-to-Speech</string>
    <string name="barcode_scanner_slide">Barcode Scanner</string>
    <string name="image_recognition_slide">Image Recognition</string>
    <string name="welcome_slide">Welcome to InSight!</string>
    <string name="instructions_slide">How to Use InSight</string>


    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="menu_request_call">Request a Call</string>
    <string name="menu_read_tutorials">Read Tutorials</string>
    <string name="menu_feedback">Provide Feedback</string>
    <string name="nav_header_desc">Navigation Bar: Select item</string>
    <string name="nav_header_title">InSight</string>
    <string name="nav_header_subtitle">InSight@gmail.com</string>
    <string name="about_insight">The InSight App</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="short_text">Short Text</string>
    <string name="color">Color</string>
    <string name="bar_code">Bar Code</string>
    <string name="image">image</string>
    <string name="currency">Currency</string>
    <string name="person">Person</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to Insight"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="help">Help</string>
    <string name="your_name_here">Your name here</string>
    <string name="logo_for_insight_app">logo for insight app</string>
    <string name="skip_slide">Skip Slide</string>
    <string name="done">Done</string>
    <string name="next_slide">Next Slide</string>
    <string name="share_message">Hey! Check out this amazing app called InSight. https://chriscsykes.github.io/InSight/ </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_paragraph">InSight is an Android application aimed at improving the quality of life of the visually impaired. Using CameraX and Google Firebase, this app helps the visually impaired by providing features like:</string>
    <string name="creators_paragraph">Created by Sylvester Coch, Sebastian Saker, and Christopher Sykes</string>
    <string name="credits_paragraph">Icon made by Icongeek26 from www.flaticon.com.</string>
    <string name="features_paragraph">- Login and Sign up via speech \n \n
    - Audio feedback on button presses using Google\'s text to speech engine \n \n
    - Text recognition for short texts and documents using Firebase ML Kit\'s text recognition API \n \n
        - Image recognition to using Firebase ML Kit\'s image labeling API \n \n
    - And more</string>
    <string name="contact_info_paragraph">For more info please visit https://github.com/chriscsykes/InSight or email us at InSightApp@gmail.com</string>
    <string name="title_activity_about2">AboutActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_read_tutorials">ReadTutorialsActivity</string>
    <string name="about_insight_title">About InSight</string>


    <string name="read_tutorials_title">Tutorial</string>
    <string name="tutorial_title">How to Use InSight</string>
    <string name="description1">Open the app, and spell out your name when prompted to.</string>
    <string name="description2">Once logged in, swipe the bottom of the screen and press down to determine which feature you are on. </string>
    <string name="description3">Once you have selected the desired feature, position the camera appropriately and tap the screen to begin. Hold the phone steady while the camera takes in the image to be processed. </string>
    <string name="description4">To log out, call for support, listen to the tutorial, provide feedback, learn more about InSight, or share this app with a friend, swipe inward from the right edge of the screen, or press the help button in the top right corner of screen to access the navigation view.</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_call_permission_denied">Permission Denied</string>
    <string name="voice_recognition_picture">picture of voice recognition</string>
    <string name="call_button">call button</string>
    <string name="call_guide">Tap the middle of your screen to call</string>
    <string name="welcome_to_insight_please_tell_us_your_name">Please tell us your name</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_insight_nav">About Insight</string>
    <string name="swipe_left_instruction">\" Swipe to the left to continue.\"</string>
    <string name="press_done_instruction">\" Press the done button at bottom right of screen to begin.\"</string>


</resources>
