<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_tutorials"
            android:icon="@drawable/ic_tutorials_docs_50"
            android:title="@string/menu_read_tutorials"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback"
            android:icon="@drawable/ic_feedback_50"/>
        <item
            android:id="@+id/nav_request_call"
            android:icon="@drawable/ic_add_phone_50"
            android:title="@string/menu_request_call" />

        <item
        android:id="@+id/nav_about_insight"
        android:icon="@drawable/ic_info_100"
        android:title="@string/about_insight_nav" />

        <item
            android:id="@+id/nav_share_with_friends"
            android:icon="@drawable/ic_share_with_friends_50"
            android:title="@string/share_with_friends" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_80"
            android:title="@string/sign_out" />
    </group>
</menu>