<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#744CB7"
                app:popupTheme="@style/PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tutorial_title"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="64dp"
            android:text="@string/tutorial_title"
            android:textAlignment="center"
            android:textColor="#8B6BC3"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description1"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_title">
        </TextView>

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="113dp"
            android:layout_height="137dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description1"
            app:srcCompat="@drawable/voice_recognition"
            android:contentDescription="@string/voice_recognition_picture"/>

        <TextView
            android:id="@+id/description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description2"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_image">
        </TextView>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/buttons_gif"
            android:layout_width="179dp"
            android:layout_height="270dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="116dp"
            android:src="@drawable/buttons_gif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description2" />

        <TextView
            android:id="@+id/description3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description3"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_gif">
        </TextView>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/feature_click_gif"
            android:layout_width="179dp"
            android:layout_height="270dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="116dp"
            android:src="@drawable/buttons_gif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description3" />

        <TextView
            android:id="@+id/description4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description4"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feature_click_gif">
        </TextView>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/nav_view_gif"
            android:layout_width="179dp"
            android:layout_height="270dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="116dp"
            android:src="@drawable/nav_view_gif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description4"
            android:paddingBottom="35dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>